Fix hamburger-button on Firefox

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -5,7 +5,7 @@
 .hamburger-button {
     border: 0; 
     text-indent: -9999px;
-    margin-left: -30px;
+    width: 80px;
     float: left;
     height: 50px;
     padding: 15px 15px;
